# PrtDatabaseMcp

./: .env.example  Dockerfile  README.md  mcp.json.example  pyproject.toml
catalog/: generated.json
scripts/: build_catalog.py  create_readonly_role.sql
src/prt_database_mcp/: __init__.py  __main__.py  catalog.py  config.py  connections.py  query_guard.py  server.py
tests/: test_catalog.py  test_query_guard.py
