[project]
name = "prt-database-mcp"
version = "0.1.0"
description = "MCP server for ProRata PostgreSQL (PrtDatabaseService)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mcp>=1.6.0",
    "asyncpg>=0.30.0",
    "sqlparse>=0.5.0",
    "prt-mcp-common>=0.1.0",
    "uvicorn>=0.30.0",
]

[project.scripts]
prt-database-mcp = "prt_database_mcp.__main__:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/prt_database_mcp"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
